@@ -1,6 +1,8 @@
 todoyu timetracking changelog
 
 timetracking 1.3.1 - not released yet
+	* Added: filter for projects with tasks that are currently begin tracked
+	* Added: filter for tasks being currently tracked
 	* Added: filter for overbooked tasks (in percent)
 	* Added: new filter for overbooked tasks (absolute in minutes)
 	* Bugfix: Fixed quicktask-handling (task_done flag was ignored / wrongly overwritten)
